--- a/index.html
+++ b/index.html
@@ -29,8 +29,7 @@
                     <ul class="navbar-nav ms-auto">
                         <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="#portfolio">Portfolio</a></li>
                         <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="#about">About</a></li>
-                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="#contact">Contact</a></li>
-                    </ul>
+                      </ul>
                 </div>
             </div>
         </nav>
@@ -48,7 +47,7 @@
                     <div class="divider-custom-line"></div>
                 </div>
                 <!-- Masthead Subheading-->
-                <p class="masthead-subheading font-weight-light mb-0">In Training Web Devloper</p>
+                <p class="masthead-subheading font-weight-light mb-0">Web Devloper Portfolio</p>
             </div>
         </header>
         <!-- Portfolio Section-->
