--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <header class="masthead bg-primary text-white text-center">
             <div class="container d-flex align-items-center flex-column">
                 <!-- Masthead Avatar Image-->
-                <img class="masthead-avatar mb-5" src="assets/img/JCD Professional Pic.png" alt="BIO Pic" />
+                <iframe style="border: 4px solid #EEE;" width="560" height="315" src="https://www.youtube.com/embed/Q-aEB21MT4c" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 <!-- Masthead Heading-->
                 <h1 class="masthead-heading text-uppercase mb-0">Justin Dieppa</h1>
                 <!-- Icon Divider-->
